--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.4/handlebars.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ember.js/1.6.1/ember.min.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
