separate handlebars files

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World!</title>
+    <title>Apollo</title>
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/vendor.js"></script>
     <script src="js/index.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node.js.
-    <h2>Here is our goddamned serial output</h2>
-    <h3 id="output"></h3>
+    <script type="text/handlebars">
+      {{outlet}}
+    </script>
   </body>
 </html>
