fix handlebars template loading

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <script src="js/index.js"></script>
   </head>
   <body>
-    <script type="text/handlebars">
-      {{outlet}}
+    <script type="text/x-handlebars">
+      {{view App.BoardsView}}
     </script>
   </body>
 </html>
