forward right to boards

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script type="text/x-handlebars">
-      {{view App.BoardsView}}
+      {{outlet}}
     </script>
   </body>
 </html>
