--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script type="text/x-handlebars">
+      {{view App.SidebarView}}
       {{outlet}}
     </script>
   </body>
