glyph link not wired up

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <body>
     <script type="text/x-handlebars">
       {{view App.SidebarView}}
-      {{outlet}}
+      <div class="right_pane">
+        {{outlet}}
+      </div>
     </script>
   </body>
 </html>
