--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="js/vendor.js"></script>
     <script src="js/index.js"></script>
+
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.css' rel='stylesheet' />
   </head>
   <body>
     <script type="text/x-handlebars">
